# ai-repo-analyzer-rs

./: .gitignore  Cargo.toml  README.md  repo_explanation.md
src/: git.rs  github.rs  ingest.rs  main.rs  pdf.rs  types.rs  utils.rs
src/analyzers/: code_metrics.rs  filesystem.rs  mod.rs  repo.rs  security.rs  type_detector.rs
