[package]
name = "ai-repo-analyzer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
rig-core = { version = "0.19.0", features = ["all"] }
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
git2 = "0.19"
walkdir = "2.5"
regex = "1.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
ignore = "0.4"
md5 = "0.7"
futures = "0.3"
encoding_rs = "0.8"
mime_guess = "2.0"
clap = { version = "4.5", features = ["derive"] }
